cluster/apps/logging/07-elasticsearch-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  labels:
    app.kubernetes.io/name: elasticsearch
spec:
  replicas: 1
  serviceName: elasticsearch
  selector:
    matchLabels:
      app.kubernetes.io/name: elasticsearch
  template:
    metadata:
      labels:
        app.kubernetes.io/name: elasticsearch
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
                - key: "app.kubernetes.io/name"
                  operator: In
                  values:
                  - elasticsearch
            topologyKey: "kubernetes.io/hostname"
      serviceAccountName: elasticsearch
      containers:
        - name: elasticsearch
          image: szpaczyn/elasticsearch-arm64:v7.9.3
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: elasticsearch-config
              mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
              subPath: elasticsearch.yml
            - name: elasticsearch-config
              mountPath: /usr/share/elasticsearch/config/jvm.options
              subPath: jvm.options
            - name: data
              mountPath: /usr/share/elasticsearch/data
          workingDir: /usr/share/elasticsearch/data
          ports:
            - containerPort: 9200
              protocol: TCP
              name: elasticsearch
            - containerPort: 9300
              protocol: TCP
              name: cluster
          resources:
            limits:
              cpu: 1
              memory: 1536Mi
            requests:
              cpu: 0.1
              memory: 512Mi
      terminationGracePeriodSeconds: 30
      volumes:
      - name: elasticsearch-config
        configMap:
          name: elasticsearch-config
      nodeSelector:
        kubernetes.io/role: worker
      tolerations:
        - effect: NoSchedule
          operator: Exists
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
        - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 48Gi
