cluster/apps/logging/kibana-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    app.kubernetes.io/name: kibana
spec:
  selector:
    app.kubernetes.io/name: kibana
  ports:
    - port: 5601
      targetPort: 5601
      protocol: TCP
      name: http
  type: ClusterIP
