cluster/apps/logging/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    app.kubernetes.io/name: kibana
spec:
  selector:
    app.kubernetes.io/name: kibana
  ports:
    - port: 5601
      targetPort: 5601
      protocol: TCP
      name: http
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: logstash
  labels:
    app.kubernetes.io/name: logstash
spec:
  selector:
    app.kubernetes.io/name: logstash
  ports:
    - port: 9600
      targetPort: 9600
      protocol: TCP
      name: http
    - port: 5044
      targetPort: 5044
      protocol: TCP
      name: filebeat-pihole
    - port: 5045
      targetPort: 5045
      protocol: TCP
      name: filebeat-sshd
  type: LoadBalancer
  loadBalancerIP: 10.1.0.12
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    app.kubernetes.io/name: elasticsearch
spec:
  selector:
    app.kubernetes.io/name: elasticsearch
  ports:
    - port: 9200
      targetPort: 9200
      protocol: TCP
      name: elasticsearch
    - port: 9300
      targetPort: 9300
      protocol: TCP
      name: cluster
  type: LoadBalancer
  loadBalancerIP: 10.1.0.11
